# cmake-sample

./: CMakeLists.txt  CMakePresets.json  README.md  asset-provider.bat  asset-source.nuspec  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp
InterpretLib/: CMakeLists.txt  InterpretLib.cpp
InterpretLib/inc/InterpretLib/: InterpretLib.h
MathLib/: CMakeLists.txt  MathLib.cpp
MathLib/inc/MathLib/: MathLib.h
tests/: CMakeLists.txt  InterpretLib_Test.cpp  MathLib_Test.cpp  main.cpp
